[package]
name = "contact"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-redis = "0.5.2"
redis          = "0.15.1"
warp           = "0.2"
anyhow = "1.0.27"
serde_json = "1.0.48"
once_cell = "1.3.1"
futures = "0.3.4"
bytes = "0.5.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version  = "0.2"
features = ["full"]
