[package]
name = "contact"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes          = "0.5.4"
deadpool-redis = "0.5.2"
once_cell      = "1.3.1"
redis          = "0.15.1"
serde_json     = "1.0.48"
warp           = "0.2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version  = "0.2"
features = ["full"]
